@@ -102,17 +102,17 @@ Dectorio uses CrowdIn to allow the community to translate the mod from English i
 
 Special thanks to the translators below (in no particular order).
 
-* Chinese Simplified (80%) - [jessefjxm](https://crowdin.com/profile/jessefjxm).
-* Chinese Traditional (34%) - [k98a](https://crowdin.com/profile/k98a).
-* Czech (83%) - [dereksp](https://crowdin.com/profile/dereksp), [Meritic](https://crowdin.com/profile/Meritic) and [Treij](https://crowdin.com/profile/Treij).
-* French (89%) - [Taniotoshi](https://crowdin.com/profile/Taniotoshi) and [daikyraraga](https://crowdin.com/profile/daikyraraga).
-* German (92%) - [seeba8](https://github.com/seeba8), [ST-DDT](https://crowdin.com/profile/ST-DDT), [LastDawn](https://crowdin.com/profile/LastDawn), [lpzockerx](https://crowdin.com/profile/lpzockerx) and [Leridon](https://crowdin.com/profile/Leridon).
-* Hungarian (100%) - [mmnetworkteam](https://crowdin.com/profile/mmnetworkteam).
-* Korean (92%) - [GimoXagros](https://crowdin.com/profile/GimoXagros).
-* Polish (100%) - [Tomirad](https://github.com/Tomirad), [Requelfade](https://crowdin.com/profile/Requelfade), [no_desired_username](https://crowdin.com/profile/no_desired_username) and [tomplus](https://crowdin.com/profile/tomplus).
-* Portuguese, Brazilian (91%) - [celaquila](https://crowdin.com/profile/celaquila).
-* Russian (99%) - [nastyslave](https://crowdin.com/profile/nastyslave), [diraria](https://crowdin.com/profile/diraria), [scheugen86](https://crowdin.com/profile/scheugen86), [antonus777](https://crowdin.com/profile/antonus777), [schmarotzerltd](https://crowdin.com/profile/schmarotzerltd) and [1avek1](https://crowdin.com/profile/1avek1).
-* Spanish (94%) - [notallme](https://crowdin.com/profile/notallme).
+* Chinese Simplified (78%) - [jessefjxm](https://crowdin.com/profile/jessefjxm).
+* Chinese Traditional (33%) - [k98a](https://crowdin.com/profile/k98a).
+* Czech (80%) - [dereksp](https://crowdin.com/profile/dereksp), [Meritic](https://crowdin.com/profile/Meritic) and [Treij](https://crowdin.com/profile/Treij).
+* French (86%) - [Taniotoshi](https://crowdin.com/profile/Taniotoshi) and [daikyraraga](https://crowdin.com/profile/daikyraraga).
+* German (89%) - [seeba8](https://github.com/seeba8), [ST-DDT](https://crowdin.com/profile/ST-DDT), [LastDawn](https://crowdin.com/profile/LastDawn), [lpzockerx](https://crowdin.com/profile/lpzockerx) and [Leridon](https://crowdin.com/profile/Leridon).
+* Hungarian (97%) - [mmnetworkteam](https://crowdin.com/profile/mmnetworkteam).
+* Korean (89%) - [GimoXagros](https://crowdin.com/profile/GimoXagros).
+* Polish (97%) - [Tomirad](https://github.com/Tomirad), [Requelfade](https://crowdin.com/profile/Requelfade), [no_desired_username](https://crowdin.com/profile/no_desired_username) and [tomplus](https://crowdin.com/profile/tomplus).
+* Portuguese, Brazilian (89%) - [celaquila](https://crowdin.com/profile/celaquila).
+* Russian (96%) - [nastyslave](https://crowdin.com/profile/nastyslave), [diraria](https://crowdin.com/profile/diraria), [scheugen86](https://crowdin.com/profile/scheugen86), [antonus777](https://crowdin.com/profile/antonus777), [schmarotzerltd](https://crowdin.com/profile/schmarotzerltd) and [1avek1](https://crowdin.com/profile/1avek1).
+* Spanish (91%) - [notallme](https://crowdin.com/profile/notallme).
 
 ### Mod Compatibility
 
